// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoTitle /> should render properly 1`] = `
<DocumentFragment>
  <div>
    <span />
  </div>
</DocumentFragment>
`;

exports[`<TodoTitle /> when className specified should render properly 1`] = `
<DocumentFragment>
  <div
    class="undefined testClassName"
  >
    <span />
  </div>
</DocumentFragment>
`;
